--- a/privacy.html
+++ b/privacy.html
@@ -25,9 +25,9 @@
 	<h2>Data Security</h2>
 	<p>We take appropriate technical and organizational measures to protect the personal information we collect against unauthorized or unlawful processing and against accidental loss, destruction, or damage.</p>
 	<h2>Your Rights</h2>
-	<p>You have the right to access, correct, or delete your personal information at any time. You can do so by contacting us at <a href="mailto:info@webmelbourne.com">contact email</a>.</p>
+	<p>You have the right to access, correct, or delete your personal information at any time. You can do so by contacting us at <a href="mailto:shanglb.au@gmail.com">contact email</a>.</p>
 	<h2>Changes to Privacy Policy</h2>
 	<p>We may update this Privacy Policy from time to time. If we make material changes, we will notify you by email or by posting a notice on our website.</p>
-	<p>If you have any questions or concerns about our privacy policy or how we handle your personal information, please contact us at <a href="mailto:info@webmelbourne.com">contact email</a>.</p>
+	<p>If you have any questions or concerns about our privacy policy or how we handle your personal information, please contact us at <a href="mailto:shanglb.au@gmail.com">contact email</a>.</p>
 </body>
 </html>
