--- a/support.html
+++ b/support.html
@@ -70,7 +70,8 @@
             <h2>Master Any Language</h2>
         </div>
         <div class="footer">
-            <a class="button" href="mailto:shanglb.au@gmail.com">Send Email</a>
+            <h1>Need any support?</h1>
+            <a class="button" href="mailto:shanglb.au@gmail.com">Contact Us</a>
             <img src="appIcon.png" alt="App Icon" width="100">
         </div>
     </div>
