--- a/support.html
+++ b/support.html
@@ -66,13 +66,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="appIcon.png" alt="App Icon" width="100">
-            <h1>Speakly</h1>
-            <h2>Master Any Language</h2>
+            <img src="AppIcon_inkpal.png" alt="App Icon" width="100">
+            <h1>Inkpal</h1>
+            <h2>AI Story Generator</h2>
         </div>
         <div class="footer">
-            <h1>Need any support?</h1>
-            <a class="button" href="mailto:shanglb.au@gmail.com">Contact Us</a>
+            <a class="button" href="mailto:shanglb.au@gmail.com">Send Email</a>
+            
         </div>
     </div>
 </body>
