--- a/index_speakly.html
+++ b/index_speakly.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inkpal - AI Story Generator</title>
+    <title>Speakly - Master Any Language</title>
     <style>
         body {
             margin: 0;
@@ -66,13 +66,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="AppIcon_inkpal.png" alt="App Icon" width="100">
-            <h1>Inkpal</h1>
-            <h2>AI Story Generator</h2>
+            <h1>Speakly</h1>
+            <h2>Master Any Language</h2>
         </div>
         <div class="footer">
             <a class="button" href="mailto:shanglb.au@gmail.com">Send Email</a>
-            
+            <img src="appIcon.png" alt="App Icon" width="100">
         </div>
     </div>
 </body>
